--- a/src/css/app.css
+++ b/src/css/app.css
@@ -15,9 +15,9 @@ body {
     background: repeating-linear-gradient(180deg, #ff7575, #ffffff 50px);
 }
 
-.ui.card>.image>img, .ui.cards>.card>.image>img {
-    width: 100%;
-    height: auto;
-    max-height: 360px;
-    border-radius: inherit;
-}
+/*.ui.card>.image>img, .ui.cards>.card>.image>img {*/
+    /*width: 100%;*/
+    /*height: auto;*/
+    /*max-height: 360px;*/
+    /*border-radius: inherit;*/
+/*}*/
