--- a/src/css/app.css
+++ b/src/css/app.css
@@ -21,3 +21,55 @@ body {
     /*max-height: 360px;*/
     /*border-radius: inherit;*/
 /*}*/
+
+.filter-button Button {
+    background: repeating-linear-gradient(180deg, #ff7575, #ffffff 50px);
+    margin: 1rem;
+}
+
+.filter-button span {
+    margin: 1rem;
+}
+
+.filter-button {
+    text-align: center;
+}
+
+.cart-sticky {
+    height: auto;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    background-color: rgb(0, 158, 127);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 21px 36px;
+    cursor: pointer;
+    position: fixed;
+    right: 0px;
+    top: 50%;
+    margin-top: -46px;
+    z-index: 99;
+    padding: 0px;
+    border-radius: 6px 0px 0px 6px;
+    border-width: 0px;
+    border-style: initial;
+    border-color: initial;
+    border-image: initial;
+    outline: 0px;
+}
+
+.bMppaE {
+    font-family: Lato, sans-serif;
+    font-size: 13px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    padding: 15px 10px;
+}
