--- a/src/components/Toolbar/toolbar.css
+++ b/src/components/Toolbar/toolbar.css
@@ -20,6 +20,20 @@
     font-size: 1.5rem;
 
 }
+.toolbar_navigation_items ul {
+    margin-top: 0;
+    margin-bottom: 0rem;
+    list-style: none;
+    display: flex;
+}
+
+.toolbar_navigation_items li{
+    padding: 0 0.5rem;
+}
+
+.spacer {
+    flex: 1;
+}
 
 .toolbar_navigation_items a {
     color: white;
