--- a/src/components/Toolbar/toolbar.css
+++ b/src/components/Toolbar/toolbar.css
@@ -14,6 +14,10 @@
     padding: 0 1rem;
 }
 
+.toolbar_logo {
+    margin: 1rem;
+}
+
 .toolbar_logo a {
     color: white;
     text-decoration: none;
