--- a/src/components/SideDrawer/sideDrawer.css
+++ b/src/components/SideDrawer/sideDrawer.css
@@ -8,6 +8,9 @@
     width: 70%;
     max-width: 400px;
     z-index: 200;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-out;
+
 }
 
 .side-drawer ul {
@@ -30,4 +33,14 @@
 .side-drawer a:hover,
 .side-drawer a:active {
     color:  #fa923f;
+}
+
+.side-drawer.open {
+    transform: translateX(0);
+}
+
+@media (min-width: 769px) {
+    .side-drawer {
+        display: none;
+    }
 }
