--- a/src/components/Toolbar/toolbar.css
+++ b/src/components/Toolbar/toolbar.css
@@ -5,6 +5,7 @@
     width: 100%;
     background: #FF7575;
     height: 60px;
+    z-index: 2;
 }
 
 .toolbar_navigation {
@@ -49,3 +50,19 @@
     color: #fa923f;
 }
 
+@media (max-width: 768px) {
+    .toolbar_navigation_items {
+        display: none;
+    }
+}
+
+@media (min-width: 769px) {
+    .toolbar_toggle-button {
+        display: none;
+    }
+
+    .toolbar_logo {
+        margin-left: 0rem;
+    }
+
+}
