--- a/src/components/Toolbar/toolbar.css
+++ b/src/components/Toolbar/toolbar.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: #FF7575;
+    background: #ffffff;
     height: 60px;
     z-index: 2;
 }
