--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -73,8 +73,8 @@ body {
     padding: 15px 10px;
 }
 
-.ui.icon.input>input {
-    padding-right: 2.67142857em!important;
+.ui.icon.input > input {
+    padding-right: 2.67142857em !important;
     margin-bottom: 20px;
 }
 
@@ -125,7 +125,7 @@ body {
     justify-content: center;
     background-color: rgb(0, 158, 127);
     width: auto;
-    color: rgb(255, 255, 255)!important;
+    color: rgb(255, 255, 255) !important;
     font-family: Lato, sans-serif;
     font-weight: 700;
     box-sizing: border-box;
@@ -157,4 +157,106 @@ body {
     overflow: hidden;
     background-position: center bottom;
     background-repeat: no-repeat;
+}
+
+.img_center_text {
+    font-family: Poppins, sans-serif;
+    font-size: 45px;
+    font-weight: 700;
+    color: rgb(13, 17, 54);
+    margin-bottom: 15px;
+    text-align: center;
+
+}
+
+.background_img {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    background-color: rgb(247, 247, 247);
+    background-size: cover;
+    overflow: hidden;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+}
+
+.center_background_div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.center_background_text {
+    font-family: Poppins, sans-serif;
+    font-size: 45px;
+    font-weight: 700;
+    color: rgb(13, 17, 54);
+    margin-bottom: 15px;
+    text-align: center
+}
+
+.center_background_sub_text {
+    font-family: Lato, sans-serif;
+    font-size: 19px;
+    font-weight: 400;
+    color: rgb(119, 121, 140);
+    margin-bottom: 60px;
+    text-align: center;
+}
+
+.center_search_box {
+    width: 100%;
+    opacity: 1;
+    height: 100%;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    font-size: 15px;
+    color: rgb(119, 121, 140);
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    transition: width 500ms ease-in-out 0s, opacity 500ms ease-in-out 0s;
+    border-width: initial;
+    border-style: none;
+    border-color: initial;
+    border-image: initial;
+    border-radius: 6px 0px 0px 6px;
+}
+
+.search_box_style {
+    font-family: Lato, sans-serif;
+    font-size: 13px;
+    color: rgb(0, 158, 127);
+    line-height: 38px;
+    font-weight: 700;
+    background-color: rgb(247, 247, 247);
+    margin-left: 5px;
+    white-space: nowrap;
+    padding: 0px 15px;
+    border-radius: 6px;
+}
+
+.search_style {
+    width: 100%;
+    opacity: 1;
+    height: 100%;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    font-size: 15px;
+    color: rgb(119, 121, 140);
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    transition: width 500ms ease-in-out 0s, opacity 500ms ease-in-out 0s;
+    border-width: initial;
+    border-style: none;
+    border-color: initial;
+    border-image: initial;
+    border-radius: 6px 0px 0px 6px;
 }
